syntax = "proto3";

package users.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// Service to perform actions on users.
service UsersService {
  // Create a new service instance.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  // Decommission a service instance.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

// Message to create a new user.
message CreateUserRequest {
  // Username
  string username = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 32
  ];
  // Plain text password.
  string password = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 8,
    (buf.validate.field).string.max_len = 64
  ];
}

// Response with the user created
message CreateUserResponse {
  User user = 1 [(buf.validate.field).required = true];
}

// DeleteUserRequest specifies the user to be deleted.
message DeleteUserRequest {
  // The user id
  string user_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];
}

// Successful response after service instance is decommissioned.
message DeleteUserResponse {
  // User id deleted.
  string user_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];
}

// User resource.
message User {
  // Instance id created.
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];
  // The creation time of the user.
  google.protobuf.Timestamp created_at = 2 [(buf.validate.field).required = true];
  // The last time the user was updated.
  google.protobuf.Timestamp updated_at = 3 [(buf.validate.field).required = true];
  // The username.
  string username = 4 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 32
  ];
}
